--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -18,7 +18,6 @@ else
 CFLAGS += -O2
 endif
 
-NOBOOST = `if [ -f /usr/src/packages/BUILD/QT/LDView.pro ] ; then echo 'DEFINES+=_NO_BOOST' ; fi`
 TESTING := $(shell if [ ! -f /usr/include/gl2ps.h ] ; then echo -I ../gl2ps -L ../gl2ps ; fi; if [ ! -f /usr/include/tinyxml.h ] ; then echo -I ../3rdParty/tinyxml ; fi)
 DEST=$(shell if [ -f /usr/src/packages/BUILD/QT/LDView.pro ] ; then echo /usr/src/packages/BUILD/debian/ldview ; else echo debian/ldview ; fi )
 export Q_LDFLAGS="-Wl,-z,relro"
@@ -36,7 +35,7 @@ build-stamp:
 	make all ;                               \
 	cd ../QT ;                               \
 	if [ `uname -m` = "x86_64" ] ; then      \
-		if [ "$QT5" != yes ] ; then          \
+		if [ "$(QT5)" != yes ] ; then        \
 			qmake-qt4 -config release        \
 		 			-spec linux-g++-64       \
 					DEFINES+=USE_CPP11 ;     \
@@ -46,7 +45,7 @@ build-stamp:
 					DEFINES+=USE_CPP11 ;     \
 		fi                                   \
 	else                                     \
-		if [ "$QT5" != yes ] ; then          \
+		if [ "$(QT5)" != yes ] ; then        \
 			qmake-qt4 -config release        \
 		 			-spec linux-g++-32       \
 					DEFINES+=USE_CPP11 ; 	 \
