--- a/QT/debian/control
+++ b/QT/debian/control
@@ -2,7 +2,10 @@ Source: ldview
 Section: graphics
 Maintainer: Peter Bartfai <pbartfai@stardust.hu>
 Priority: optional
+#Qt4.x
 Build-Depends: debhelper (>= 4.1.6), libqt4-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev
+#Qt5.x
+#Build-Depends: debhelper (>= 4.1.6), qtbase5-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev
 Homepage: http://ldview.sourceforge.net/
 Standards-Version: 3.9.4
 
