--- a/LDView.rc
+++ b/LDView.rc
@@ -1393,8 +1393,8 @@ IDB_ERROR_LOOP_MASK     BITMAP                  "icons\\error_loop_mask.bmp"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 4,3,0,1
- PRODUCTVERSION 4,3,0,1
+ FILEVERSION 4,3,0,2
+ PRODUCTVERSION 4,3,0,2
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x9L
@@ -1411,12 +1411,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "3D Lego Model Viewer for models in LDraw format."
             VALUE "FileDescription", "LDView"
-            VALUE "FileVersion", "4.3"
+            VALUE "FileVersion", "4.3 Beta 1"
             VALUE "InternalName", "LDView"
             VALUE "LegalCopyright", "Copyright © 2016 Travis Cobbs & Peter Bartfai"
             VALUE "OriginalFilename", "LDView.exe"
             VALUE "ProductName", "LDView"
-            VALUE "ProductVersion", "4.3"
+            VALUE "ProductVersion", "4.3 Beta 1"
         END
     END
     BLOCK "VarFileInfo"
