--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Peter Bartfai <pbartfai[at]stardust[dot]hu>
 pkgname=ldview
-pkgver=4.3
+pkgver=4.3Beta1
 pkgrel=1
 pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://sourceforge.net/projects/ldview"
