Replace reference to sourceforge.net to github.com

--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=ldview
 pkgver=4.3Beta1
 pkgrel=1
 pkgdesc="A real-time 3D viewer for displaying LDraw models"
-url="http://sourceforge.net/projects/ldview"
+url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
 #Qt4.x
