--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -39,7 +39,12 @@ build-stamp:
 	qmake -config release                    \
 		-spec $(SPEC)                        \
 		GCONFSCHDIR=/usr/share/gconf/schemas \
-		DEFINES+=USE_CPP11 ;     \
+		DEFINES+=USE_CPP11 ;     			 \
+	if which lrelease-qt4 >/dev/null ; then  \
+		lrelease-qt4 LDView.pro;			 \
+	else									 \
+		lerelease-qt5 LDView.pro;			 \
+	fi;										 \
 	make all ;                               \
 	cd kde ; mkdir -p build ; cd build ;     \
 	(QT_SELECT=4;cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; \
