Enable OSX on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ matrix:
     compiler: gcc
     env:
      - QT_BASE=57
-#  - os: osx
-#    compiler: clang
+  - os: osx
+    compiler: clang
 
 before_install:
   - if [[ "$QT_BASE" = "48" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt487-trusty -y; fi
