--- a/QT/docker/Dockerfile-fedora:25
+++ b/QT/docker/Dockerfile-fedora:25
@@ -1,7 +1,9 @@
 FROM fedora:25
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
-RUN dnf install -y git make qt-devel qt4-devel gcc gcc-c++ rpm-build mesa-libOSMesa-devel kdebase-devel libpng-devel libjpeg-turbo-devel tinyxml-devel rpmlint gl2ps-devel ccache rpmlint
+RUN dnf install -y git rpmlint ccache dnf-plugins-core rpm-build
 RUN git clone https://github.com/tcobbs/ldview
+RUN dnf builddep -y ldview/QT/LDView.spec
+
 VOLUME /mnt/lego
 CMD dnf update -x kernel* -y; cd ldview/QT ; git pull; rpmbuild -bb LDView.spec ; for r in /root/rpm*/RPMS/*/ldview*.rpm /usr/src/redhat/RPMS/*/ldview*.rpm /usr/src/packages/RPMS/*/ldview*.rpm ; do if [ -f $r ] ; then if [ -d /mnt/lego ] ; then cp -f $r /mnt/lego ; fi ; rpmlint $r ; fi; done
