--- a/QT/debian/control
+++ b/QT/debian/control
@@ -3,7 +3,7 @@ Section: graphics
 Maintainer: Peter Bartfai <pbartfai@stardust.hu>
 Priority: optional
 #Qt4.x
-Build-Depends: debhelper (>= 4.1.6), libqt4-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev
+Build-Depends: debhelper (>= 4.1.6), libqt4-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev, libjpeg-dev
 #Qt5.x
 #Build-Depends: debhelper (>= 4.1.6), qtbase5-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, libpng-dev
 Homepage: http://tcobbs.github.io/ldview
