--- a/QT/docker/Dockerfile-ubuntu:16.04
+++ b/QT/docker/Dockerfile-ubuntu:16.04
@@ -1,7 +1,8 @@
 FROM ubuntu:16.04
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
-RUN apt-get update ; apt-get install -y lsb-release gcc git make g++ libqt4-dev libpng-dev libjpeg-dev libtinyxml-dev cmake kdelibs5-dev fakeroot lintian libgl2ps-dev build-essential debhelper libosmesa6-dev ccache
+RUN apt-get update ; apt-get install -y git lintian build-essential debhelper ccache devscripts equivs
 RUN git clone https://github.com/tcobbs/ldview
+RUN cd ldview/QT;mk-build-deps -t "apt-get -y" -r -i debian/control
 VOLUME /mnt/lego
 CMD cd ldview/QT ; git pull; ./makedeb ; if [ -d /mnt/lego ] ; then cp -f ldview*.deb /mnt/lego/ ; fi
