--- a/QT/docker/Dockerfile-mageia:5
+++ b/QT/docker/Dockerfile-mageia:5
@@ -1,8 +1,10 @@
 FROM mageia:5
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
-RUN urpmi --auto git make lib64qt4-devel gcc gcc-c++ rpm-build kdebase4-devel kdelibs4-devel cmake lib64png-devel tinyxml-devel rpmlint lib64osmesa-devel boost-devel
+RUN urpmi --auto git rpm-build rpmlint
 RUN git clone https://github.com/tcobbs/ldview
+RUN urpmi --auto --buildrequires ldview/QT/LDView.spec
+
 VOLUME /mnt/lego
 ENV PATH /usr/lib64/qt4/bin:$PATH
 CMD cd ldview/QT ; git pull; rpmbuild -bb LDView.spec ; for r in /root/rpm*/RPMS/*/ldview*.rpm /usr/src/redhat/RPMS/*/ldview*.rpm /usr/src/packages/RPMS/*/ldview*.rpm ; do if [ -f $r ] ; then if [ -d /mnt/lego ] ; then cp -f $r /mnt/lego ; fi ; rpmlint $r ; fi; done
