--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,9 @@ before_install:
   - if [[ "$QT_BASE" = "56" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt562-trusty -y; fi
   - if [[ "$QT_BASE" = "57" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt571-trusty -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
-      sudo apt-get update -qq;
+      if  [ -n "$QT_BASE" ] ; then
+        sudo apt-get update -qq;
+      fi
     else
       brew update;
     fi
