--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
      - QT_BASE=57
   - os: linux
     dist: trusty
-    sudo: false
+    sudo: required
     compiler: gcc
   - os: osx
     compiler: clang
@@ -38,14 +38,13 @@ before_install:
   - if [[ "$QT_BASE" = "56" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt562-trusty -y; fi
   - if [[ "$QT_BASE" = "57" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt571-trusty -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
-      if  [ -n "$QT_BASE" ] ; then
-        sudo apt-get update -qq;
-      fi
+      sudo apt-get update -qq;
     else
       brew update;
     fi
 
 install:
+  - if [[ "$QT_BASE" = ""   && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq lintian kdelibs5-dev debhelper cmake libosmesa6-dev; fi
   - if [[ "$QT_BASE" = "48" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq opt-qt4-qmake opt-qt4-dev-tools; source /opt/qt-4.8/bin/qt-4.8-env.sh; fi
   - if [[ "$QT_BASE" = "51" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt51base; source /opt/qt51/bin/qt51-env.sh; fi
   - if [[ "$QT_BASE" = "52" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt52base; source /opt/qt52/bin/qt52-env.sh; fi
