--- a/OSMesa/Makefile
+++ b/OSMesa/Makefile
@@ -114,9 +114,9 @@ ifneq ($(shell if test -f /usr/include/tinyxml.h ; then echo OK ; fi),OK)
 LIBS +=-L$(BASEDIR)/3rdParty/tinyxml
 ldview:    $(BASEDIR)/3rdParty/tinyxml/libtinyxml.a
 $(BASEDIR)/3rdParty/tinyxml/libtinyxml.a: $(BASEDIR)/3rdParty/tinyxml/*.cpp $(BASEDIR)/3rdParty/tinyxml/*.h
-	cd $(BASEDIR)/3rdParty/tinyxml/ ; make -f Makefile.pbartfai
+	cd $(BASEDIR)/3rdParty/tinyxml/ ; $(MAKE) -f Makefile.pbartfai
 tinyxmlclean:
-	cd ../3rdParty/tinyxml ; make -f Makefile.pbartfai clean
+	cd ../3rdParty/tinyxml ; $(MAKE) -f Makefile.pbartfai clean
 clean: tinyxmlclean
 endif
 
@@ -124,10 +124,10 @@ ifneq ($(shell if test -f /usr/include/gl2ps.h ; then echo OK ; fi),OK)
 LIBS +=-L$(BASEDIR)/gl2ps
 ldview: $(BASEDIR)/gl2ps/libgl2ps.a
 $(BASEDIR)/gl2ps/libgl2ps.a: $(BASEDIR)/gl2ps/*.c $(BASEDIR)/gl2ps/*.h
-	cd $(BASEDIR)/gl2ps ; make
+	cd $(BASEDIR)/gl2ps ; $(MAKE)
 
 gl2psclean:
-	cd ../gl2ps ; make clean
+	cd ../gl2ps ; $(MAKE) clean
 clean: gl2psclean
 endif
 
