--- a/QT/docker/Dockerfile-centos:6
+++ b/QT/docker/Dockerfile-centos:6
@@ -6,4 +6,15 @@ RUN git clone https://github.com/tcobbs/ldview
 RUN yum-builddep -y ldview/QT/LDView.spec
 
 VOLUME /mnt/lego
-CMD yum update -x kernel* -y; cd ldview/QT ; git pull; rpmbuild -bb LDView.spec ; for r in /root/rpm*/RPMS/*/ldview*.rpm /usr/src/redhat/RPMS/*/ldview*.rpm /usr/src/packages/RPMS/*/ldview*.rpm ; do if [ -f $r ] ; then if [ -d /mnt/lego ] ; then cp -f $r /mnt/lego ; fi ; rpmlint $r ; fi; done
+CMD yum update -x kernel* -y; \
+	cd ldview/QT ;\
+	git pull; \
+	rpmbuild -bb LDView.spec ;\
+	for r in /root/rpm*/RPMS/*/ldview*.rpm /usr/src/redhat/RPMS/*/ldview*.rpm /usr/src/packages/RPMS/*/ldview*.rpm ; do \
+		if [ -f $r ] ; then \
+			if [ -d /mnt/lego ] ; then \
+				cp -f $r /mnt/lego ; \
+			fi ; \
+			rpmlint $r ; \
+		fi; \
+	done
