--- a/QT/docker/Dockerfile-debian:8
+++ b/QT/docker/Dockerfile-debian:8
@@ -6,4 +6,8 @@ RUN git clone https://github.com/tcobbs/ldview
 RUN cd ldview/QT;mk-build-deps -t "apt-get -y" -r -i debian/control
 
 VOLUME /mnt/lego
-CMD cd ldview/QT ; git pull; ./makedeb ; if [ -d /mnt/lego ] ; then cp -f ldview*.deb /mnt/lego/ ; fi
+CMD cd ldview/QT ; \
+	git pull; ./makedeb ; \
+	if [ -d /mnt/lego ] ; then \
+		cp -f ldview*.deb /mnt/lego/ ; \
+	fi
