--- a/QT/docker/Dockerfile-ubuntu:16.10
+++ b/QT/docker/Dockerfile-ubuntu:16.10
@@ -5,4 +5,9 @@ RUN apt-get update ; apt-get install -y git lintian build-essential debhelper cc
 RUN git clone https://github.com/tcobbs/ldview
 RUN cd ldview/QT;mk-build-deps -t "apt-get -y" -r -i debian/control
 VOLUME /mnt/lego
-CMD cd ldview/QT ; git pull; ./makedeb ; if [ -d /mnt/lego ] ; then cp -f ldview*.deb /mnt/lego/ ; fi
+CMD cd ldview/QT ; \
+	git pull; \
+	./makedeb ; \
+	if [ -d /mnt/lego ] ; then \
+		cp -f ldview*.deb /mnt/lego/ ; \
+	fi
