FreeBSD: packaging script dependency enhancement

--- a/QT/freebsd/Makefile
+++ b/QT/freebsd/Makefile
@@ -9,6 +9,10 @@ GH_TAGNAME=	79e7dd1
 MAINTAINER=	pbartfai@stardust.hu
 COMMENT=	LDraw model viewer
 WRKSRC_SUBDIR=	QT
+LIB_DEPENDS=	libOSMesa.so:graphics/osmesa \
+		libtinyxml.so:textproc/tinyxml \
+		libgl2ps.so:print/gl2ps \
+		lib3ds.so:graphics/lib3ds
 USES=		qmake gmake desktop-file-utils shared-mime-info
 USE_QT5=	buildtools_build qmake_build core gui linguist opengl
 QMAKE_ARGS+=	-spec freebsd-clang MANDIR=${PREFIX}/man/ DOCDIR=${STAGEDIR}${PREFIX}/share/doc/ldview/ SYSCONFDIR=${PREFIX}/etc
