--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ install:
   - if [[ "$QT_BASE" = "57" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt57base; source /opt/qt57/bin/qt57-env.sh; fi
   - if [[ "$QT_BASE" = "58" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt58base; source /opt/qt58/bin/qt58-env.sh; fi 
   - if [[ "$QT_BASE" = "59" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt59base; source /opt/qt59/bin/qt59-env.sh; fi 
+  - if [[ "$QT_BASE" = ""   && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq fakeroot qt5-qmake qtbase5-dev; fi 
   
 script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
