Travis CI: upgrade to Xcode 9.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ matrix:
      - JOB="Ubuntu packaging test"
   - os: osx
     compiler: clang
+    osx_image: xcode9.2
 
 before_install:
   - if [[ "$QT_BASE" = "48" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt487-trusty -y; fi
