--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,12 @@ matrix:
     compiler: gcc
     env:
      - JOB="Ubuntu packaging test"
+  - os: linux
+    dist: trusty
+    sudo: required
+    services: docker
+    env:
+     - DOCKER="Fedora26"
   - os: osx
     compiler: clang
     osx_image: xcode9.2
@@ -71,7 +77,7 @@ before_install:
     fi
 
 install:
-  - if [[ "$QT_BASE" = ""   && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq lintian kdelibs5-dev debhelper cmake libosmesa6-dev libtinyxml-dev fakeroot qt5-qmake qtbase5-dev ; fi
+  - if [[ "$QT_BASE" = ""   && "$TRAVIS_OS_NAME" = "linux" && "$DOCKER" = "" ]]; then sudo apt-get install -qq lintian kdelibs5-dev debhelper cmake libosmesa6-dev libtinyxml-dev fakeroot qt5-qmake qtbase5-dev ; fi
   - if [[ "$QT_BASE" = "48" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq opt-qt4-qmake opt-qt4-dev-tools; source /opt/qt-4.8/bin/qt-4.8-env.sh; fi
   - if [[ "$QT_BASE" = "51" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt51base; source /opt/qt51/bin/qt51-env.sh; fi
   - if [[ "$QT_BASE" = "52" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt52base; source /opt/qt52/bin/qt52-env.sh; fi
@@ -89,8 +95,11 @@ script:
       if  [ -n "$QT_BASE" ] ; then
         qmake DEFINES+=USE_CPP11 -spec linux-g++-64;
         make;
-      else
+      elif [ "$DOCKER" = "" ] ;then
         ./makedeb;
+      elif [ "$DOCKER" = "Fedora26" ] ;then
+        docker build -t ldview-fedora26 -f docker/Dockerfile-fedora26
+        docker run ldview-fedora26
       fi
     else
       cd MacOSX/LDView;
