--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ matrix:
     sudo: required
     services: docker
     env:
-     - DOCKER="Fedora26"
+     - DOCKER="fedora_27"
   - os: osx
     compiler: clang
     osx_image: xcode9.2
@@ -99,10 +99,11 @@ script:
         if [ "$DOCKER" = "" ] ;then
           ./makedeb;
         fi;
-        if [ "$DOCKER" = "Fedora26" ] ;then
+        if [ -n "$DOCKER" ] ;then
           cd docker ;
-          docker build -t ldview-fedora26 -f Dockerfile-fedora_26 . ;
-          docker run ldview-fedora26 ;
+          name=`echo $DOCKER|tr -d _`
+          docker build -t ldview-$name-f Dockerfile-$DOCKER . ;
+          docker run ldview-$name ;
         fi;
       fi
     else
